Fix small text wrapping bug in responsive tables
On the treatment event page the long table combined with the navigation
side menu caused horizontal scrolling at around 800px, but this is now
fixed.

--- a/ntbs-service/wwwroot/css/table.scss
+++ b/ntbs-service/wwwroot/css/table.scss
@@ -21,6 +21,10 @@
     padding-right: 8px;
 }
 
+.wrap-cell-contents .nhsuk-table__header {
+    white-space: normal;
+}
+
 // Add some padding to the responsive table cells as well, because for narrow screens each cell gets its own
 // row (visually, not semantically). The hover highlighting doesn't look great without this padding, with the
 // highlighting finishing on the edge of the last letter.
